fix(collapsable bar): fixed collapsing styling behaviour

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  background-color: rgb(219 201 245);
   color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
